sh2c/tests/fixtures/cli_check_err.stderr.expected
cli_check_err.sh2:2:13: Unexpected statement separator ';' inside expression. Use ';' only between statements.
    let x = ; // Syntax error
            ^
